= Version History =

x.x:

- changed: no longer outputting the Exception during the registration process because of confusing errors

1.1 (2013-04-05):

- added: index widget to show only SAML logins
- added: Dutch translation
- changed: layout of the no account linked page
- fixed: SAML icon now loads correctly
- fixed: auto generation of username now always makes valid usernames

1.0 (2012-12-27):

- first release