@@ -2,6 +2,7 @@
 
 x.x:
 
+- added: saving of the SAML attributes on login
 - changed: no longer outputting the Exception during the registration process because of confusing errors
 
 1.1 (2013-04-05):
